Hotfix: temporarily change cors for testing